--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <h2>Razones por las que Te Amo 💕</h2>
     <div class="timeline">
       <p>🌸 Porque siempre me haces sonreír</p>
-      <p>💌 Porque me escuchas y me entiendes</p>
-      <p>✨ Porque eres mi paz y mi alegría</p>
+      <p>💌 Porque a tu lado estoy haciendo cosas nuevas y que por primera vez hago</p>
+      <p>✨ Porque aunque peliemos no puedo vivir sin ti</p>
       <p>💍 Porque quiero un futuro contigo</p>
+      <p>❤️ Y por muchas cosas mas...</p>
+      <p>💕 TE AMOOO</p>
     </div>
   </section>
   
@@ -28,9 +30,9 @@
   <section>
     <h2>Galería de Recuerdos 📸</h2>
     <div class="gallery">
-      <img src="foto1.jpg" alt="Recuerdo 1" onclick="abrirCarta('foto1.jpg','Mi amor, este día fue inolvidable porque... 💕')">
-      <img src="foto2.jpg" alt="Recuerdo 2" onclick="abrirCarta('foto2.jpg','Cada vez que veo esta foto recuerdo lo feliz que soy contigo 🌹')">
-      <img src="foto3.jpg" alt="Recuerdo 3" onclick="abrirCarta('foto3.jpg','Eres mi mejor aventura ✨')">
+      <img src="foto1.jpg" alt="Recuerdo 1" onclick="abrirCarta('foto1.jpg','Te amo con todo mi ser eres la razon de mi existir vida mia 💕')">
+      <img src="foto2.jpg" alt="Recuerdo 2" onclick="abrirCarta('foto2.jpg','Aunque no siempre lo demuestro y se que piensas que no te quiero y eso mi amor por ti es verdadero y me choca que lo dudes jsjs 🌹')">
+      <img src="foto3.jpg" alt="Recuerdo 3" onclick="abrirCarta('foto3.jpg','Eres mi mejor y unica aventura, gracias por estar a mi lado ✨')">
     </div>
   </section>
   
@@ -60,7 +62,7 @@
   </section>
 
   <footer>
-    <p>Con mucho amor, tuyo para siempre ❤️</p>
+    <p>Con mucho amor para Alisson, tuyo para siempre ❤️</p>
   </footer>
 
   <!-- Conectamos JS -->
